--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="banner"></div>
     <div class="banner1"></div>
 </body>
-<script src="libs/jquery.js"></script>
+<script src="libs/jquery-2.2.4.js"></script>
 <script src="jQuery.banner.1.0.js"></script>
 <script>
     $(".banner").banner({
